{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 155,
  "lineage": "4e56c680-2e7f-12f4-3d88-0a660c9bff79",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "a10_web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-080e1f13689e07408",
            "arn": "arn:aws:ec2:us-east-1:730335575456:instance/i-0f3997e0062399e7c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LabRoleInstanceProfile2",
            "id": "i-0f3997e0062399e7c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09fa1713069002142",
            "private_dns": "ip-10-0-101-144.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.144",
            "public_dns": "ec2-3-93-213-157.compute-1.amazonaws.com",
            "public_ip": "3.93.213.157",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ff32eaca95124ce1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03ccbc83e4d0b3b62",
            "tags": {
              "Name": "a10-TicTacToe"
            },
            "tags_all": {
              "Name": "a10-TicTacToe"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-050c0b0d8b5bcda3c"
            ]
          },
          "dependencies": [
            "aws_api_gateway_deployment.game_results_deployment",
            "aws_api_gateway_integration.lambda_integration",
            "aws_api_gateway_integration_response.post_integration_response",
            "aws_api_gateway_method.post_method",
            "aws_api_gateway_method_response.post_method_response",
            "aws_api_gateway_resource.results_resource",
            "aws_api_gateway_rest_api.game_results_api",
            "aws_cognito_user_pool.a10_user_pool",
            "aws_cognito_user_pool_client.a10_user_pool_client",
            "aws_cognito_user_pool_domain.a10_user_pool_domain",
            "aws_dynamodb_table.ttt_game_table",
            "aws_iam_instance_profile.a10_instance_profile",
            "aws_lambda_function.update_ranking",
            "aws_s3_bucket.ttt_bucket",
            "aws_security_group.allow_ssh_http",
            "aws_subnet.a10_subnet",
            "aws_vpc.a10_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "a10_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335575456:internet-gateway/igw-0d15130031d1f4927",
            "id": "igw-0d15130031d1f4927",
            "owner_id": "730335575456",
            "tags": {
              "Name": "my-igw"
            },
            "tags_all": {
              "Name": "my-igw"
            },
            "vpc_id": "vpc-04d0027ee55e932bb"
          },
          "dependencies": [
            "aws_vpc.a10_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "a10_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335575456:route-table/rtb-0edf31fd6e115cfbc",
            "id": "rtb-0edf31fd6e115cfbc",
            "owner_id": "730335575456",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d15130031d1f4927",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "a10_rt"
            },
            "tags_all": {
              "Name": "a10_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d0027ee55e932bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.a10_igw",
            "aws_vpc.a10_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a10_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e67c6ee1d9fcb85",
            "route_table_id": "rtb-0edf31fd6e115cfbc",
            "subnet_id": "subnet-03ccbc83e4d0b3b62"
          },
          "dependencies": [
            "aws_internet_gateway.a10_igw",
            "aws_route_table.a10_rt",
            "aws_subnet.a10_subnet",
            "aws_vpc.a10_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335575456:security-group/sg-050c0b0d8b5bcda3c",
            "description": "Allow SSH and HTTP inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-050c0b0d8b5bcda3c",
            "ingress": [],
            "name": "allow_ssh_http",
            "name_prefix": "",
            "owner_id": "730335575456",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ssh-http"
            },
            "tags_all": {
              "Name": "allow-ssh-http"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d0027ee55e932bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.a10_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1174377658",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-050c0b0d8b5bcda3c",
            "security_group_rule_id": "sgr-00d8358116dfdbe8e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_ssh_http",
            "aws_vpc.a10_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8080,
            "id": "sgrule-1280073241",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-050c0b0d8b5bcda3c",
            "security_group_rule_id": "sgr-0c538d2b89f241a1c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8081,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_ssh_http",
            "aws_vpc.a10_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1697643835",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-050c0b0d8b5bcda3c",
            "security_group_rule_id": "sgr-01bdfa5aec7c9ccfe",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_ssh_http",
            "aws_vpc.a10_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "a10_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335575456:subnet/subnet-03ccbc83e4d0b3b62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ccbc83e4d0b3b62",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335575456",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "a10-subnet"
            },
            "tags_all": {
              "Name": "a10-subnet"
            },
            "vpc_id": "vpc-04d0027ee55e932bb"
          },
          "dependencies": [
            "aws_vpc.a10_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "a10_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335575456:vpc/vpc-04d0027ee55e932bb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06a5d63e1a8511be9",
            "default_route_table_id": "rtb-0871d1a695531b3d1",
            "default_security_group_id": "sg-0a9cab52b73e1e787",
            "dhcp_options_id": "dopt-011f9d54be25dba16",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04d0027ee55e932bb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0871d1a695531b3d1",
            "owner_id": "730335575456",
            "tags": {
              "Environment": "dev",
              "Name": "a10-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "a10-vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}